--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,7 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  background-color: #312f2f;
-  font-family: 'Inter', sans-serif;
+  @apply bg-skillgray text-skillwhite font-sans;
 }
